# ACCESS_scripts_DFA

./: .gitignore  README.md
GIS_folder/: MEASO_regions.qml  SO_Map.qgz
Outputs/Figures/Archive/: meanTemp.tiff
Scripts/: ..%5COutputs%5CFigures%5CTimeSeriesSeaIce.tiff  .gitignore  0_CreatingMeasoMask.ipynb  0_PlottingData.ipynb  CreateVideosUsingImages.py  IceSeasonCalculations.R  MixedLayerDepth.ipynb  SIS_Comparison_Obs_Model.ipynb  SeaIcePlots.ipynb  SeaIcePlotsModel.ipynb  SeaIceSeasonality-Copy1.ipynb  SeaIceSeasonality.ipynb  TemperaturePlots.ipynb  TemporalTrends.ipynb  Untitled.ipynb  VariousPlots.ipynb  ZonalStatistics-Copy1.ipynb  ZonalStatistics.ipynb  ZonalStatsFunctions.py  meanTemp.tiff
Scripts/ACCESS_OM2_AnalysisTools/: LICENSE  README.md  setup.cfg
Scripts/ACCESS_OM2_AnalysisTools/ACCESS_Analysis/: myfunctions.py
Scripts/ACCESS_OM2_AnalysisTools/tests/: test_myfunctions.py
Scripts/CorrectionsMEASOshps/: CorrectionsMEASOshps.R
Scripts/CorrectionsMEASOshps/Outputs/: measo.dbf
Scripts/MEASO/: 0_CreatingMeasoMask.ipynb  1_CalculatingCellSummaries.ipynb  DataForAnimations.ipynb  MEASO_space.ipynb  Masking_ACCESS-ESM15.ipynb  UsefulFunctions.py
Scripts/PythonMaps_UTAS/Scripts/: PlottingMaps_Python.ipynb
Scripts/Stephy/: MLD_calc_Denisse.ipynb
Scripts/TestingScripts/: 0_PlottingData.ipynb  1_Geopandas.ipynb  Clipping data with shapefiles.ipynb  PosterFigures.ipynb  ProbabilityDensityFunction.ipynb  SIS_Comparison_Obs_Model.ipynb  VariousPlots.ipynb  jobscript
Scripts/Trend_Analysis/: .Rhistory
Scripts/Trend_Analysis/Data/: Atl_MLD.csv  (+8 more)
(+1 files in other folders)
