[metadata]
name = 'ACCESS_Analysis'
version = 0.0.1
author = 'Denisse Fierro Arcos'
author_email = lidefi87@gmail.com
description = 'Python library developed to analyse ACCESS-OM2 outputs'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lidefi87/ACCESS_scripts_DFA
project_urls =
    Bug Tracker = https://github.com/lidefi87/ACCESS_scripts_DFA/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Natural Language :: English
    Topic :: Scientific/Engineering

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src